[project]
name = "ttrack"
version = "0.2.0"
description = "ttrack: the lightweight time tracker."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Thomas B. Brunner"}
]
maintainers = [
  {name = "Thomas B. Brunner"}
]
dependencies = []

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
ttrack = "ttrack.main:main"

[tool.setuptools]
packages = ["ttrack"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
